Update to use `VMVC`