@@ -11,8 +11,8 @@
     <name>${project.artifactId}</name>
 
     <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -62,6 +62,13 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
             <version>21</version>
+        </dependency>
+
+        <!-- MVC Framework -->
+        <dependency>
+            <groupId>com.github.Valkryst</groupId>
+            <artifactId>VMVC</artifactId>
+            <version>0d3561d613db3f790f1639a04fb22a7a63ad44f0</version>
         </dependency>
 
         <!-- UI Theme -->
@@ -210,9 +217,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>20</source>
-                    <target>20</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
